added year filter and investigating joins

--- a/config/schemas/input_constrained_schema.toml
+++ b/config/schemas/input_constrained_schema.toml
@@ -1,7 +1,7 @@
-[lsoa_code]
-old_name = "LSOA code"
-Deduced_Data_Type = "str"
-
 [lad_code]
 old_name = "LAD code"
+Deduced_Data_Type = "str"
+
+[transaction]
+old_name = "Transaction"
 Deduced_Data_Type = "str"
