--- a/config/schemas/input_constrained_schema.toml
+++ b/config/schemas/input_constrained_schema.toml
@@ -1,7 +1,15 @@
-[lad_code]
-old_name = "LAD code"
+[lsoa_code]
+old_name = "lsoa_code"
 Deduced_Data_Type = "str"
 
-[transaction]
-old_name = "Transaction"
+[lsoa_name]
+old_name = "lsoa_name"
+Deduced_Data_Type = "str"
+
+[lad_code]
+old_name = "lad_code"
+Deduced_Data_Type = "str"
+
+[lad_name]
+old_name = "lad_name"
 Deduced_Data_Type = "str"
