--- a/config/config.toml
+++ b/config/config.toml
@@ -22,6 +22,7 @@ input_adj_schema_name = "input_adj_schema.toml"
 input_constrained_schema_name = "input_constrained_schema.toml"
 input_unconstrained_schema_name = "input_unconstrained_schema.toml"
 output_preprocess_schema_path = "output_preprocess_schema.toml"
+output_adjustment_powerbi_schema_path = "output_adjustment_powerbi_schema.toml"
 output_adjustment_schema_path = "output_adjustment_schema.toml"
 
 [local_settings]
@@ -46,7 +47,9 @@ output_filename = "manual_adj_preprocessed_output.csv" #Change name of file here
 input_adj_file_path = "/Office for National Statistics/Subnational Statistics - 2025_Manual_Adjustments/PowerBI_Tool/gdhi_manual_adj_preprocessed_SBRSS_output_test_analyst_assessment_DUMMY.csv"
 input_constrained_file_path = "/Office for National Statistics/Subnational Statistics - 2025_Manual_Adjustments/Testing_Data/DAP_Exported/GDHI_Preproc_HMRC_SBRSS_Constrained.csv"
 input_unconstrained_file_path = "/Office for National Statistics/Subnational Statistics - 2025_Manual_Adjustments/Testing_Data/DAP_Exported/GDHI_Preproc_HMRC_SBRSS_Unconstrained.csv"
+interim_filename =  "manual_adj_adjustments_interim_QA.csv" #Change name of file here
 output_dir = "/Office for National Statistics/Subnational Statistics - 2025_Manual_Adjustments/Testing_Data/Output/"
+output_powerbi_filename = "gdhi_manual_adj_powerbi_QA_output.csv" #Change name of file here
 output_filename = "gdhi_manual_adj_adjusted_output.csv" #Change name of file here
 
 # Application metadata
