--- a/config/config.toml
+++ b/config/config.toml
@@ -12,6 +12,9 @@ iqr_multiplier = 3.0 # multiplier for calculating IQR bounds
 transaction_name = "Compensation of employees"
 start_year = 2010
 end_year = 2023
+sas_code_filter = "G866BTR"
+cord_code_filter = "D75"
+credit_debit_filter = "D"
 output_data = true
 
 [pipeline_settings]
@@ -30,7 +33,7 @@ output_adjustment_schema_path = "output_adjustment_schema.toml"
 #sharepoint site, go into the subfolder 'GDHI' and open '2025_manual_adjustments'
 #and click the 'sync' button to sync to your local OneDrive.
 input_dir = "/Office for National Statistics/Subnational Statistics - 2025_Manual_Adjustments/Testing_Data/"
-input_gdhi_file_path = "DAP_Exported/GDHI_Preproc_HMRC_PIR_Unconstrained.csv"
+input_unconstrained_file_path = "DAP_Exported/GDHI_Preproc_HMRC_PIR_Unconstrained.csv"
 input_ra_lad_file_path = "Reg_Accounts/uk_gdhi_by_component_2022.csv"
 output_dir = "/Office for National Statistics/Subnational Statistics - 2025_Manual_Adjustments/Testing_Data/Output/"
 interim_filename = "manual_adj_preprocessing_interim_scores.csv" #Change name of file here
@@ -51,7 +54,7 @@ output_filename = "gdhi_manual_adj_adjusted_output.csv" #Change name of file her
 [preprocessing_local_settings]
 #Match below local settings to locations of files stored locally
 input_dir = "D:/gdhi/Testing_Data/"
-input_gdhi_file_path = "gdhi_adj_dummy.csv"
+input_unconstrained_file_path = "gdhi_adj_dummy.csv"
 input_ra_lad_file_path = "gdhi_adj_ra_lad_dummy.csv"
 output_dir = "D:/gdhi/Testing_Data/Output/"
 interim_filename = "manual_adj_preprocessing_interim_scores.csv" #Change name of file here
